@@ -913,8 +913,8 @@ class TestFileUtils
     # FreeBSD ufs and tmpfs don't allow to change sticky bit against
     # regular file. It's slightly strange. Anyway it's no effect bit.
     # see /usr/src/sys/ufs/ufs/ufs_chmod()
-    # NetBSD also denies it.
-    if /freebsd|netbsd/ !~ RUBY_PLATFORM
+    # NetBSD and OpenBSD also denies it.
+    if /freebsd|netbsd|openbsd/ !~ RUBY_PLATFORM
       chmod "u+t,o+t", 'tmp/a'
       assert_equal 07500, File.stat('tmp/a').mode & 07777
       chmod "a-t,a-s", 'tmp/a'
